--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.6.0",
+    "clsx": "^1.1.1",
+    "d3": "^7.2.1",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.0",
+    "@svgr/webpack": "^6.1.2",
+    "@types/d3": "^7.1.0",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^17.0.0",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "prisma": "^3.6.0",
+    "sass": "^1.45.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
